--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html, body {
     padding: 10px;
 }
 
+* {
+    -webkit-app-region: drag;
+}
+
 .input-group-prepend {
     width: 110px;
 }
@@ -16,4 +20,8 @@ html, body {
     margin-bottom: 15px;
     padding: 6px 0;
     height: 38px;
+}
+
+button, input {
+    -webkit-app-region: no-drag;
 }
